--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.1.2",
     "@heroicons/react": "^1.0.5",
+    "@urbica/react-map-gl": "^1.14.4",
     "date-fns": "^2.28.0",
+    "geolib": "^3.3.3",
+    "mapbox-gl": "^2.7.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^7.0.7",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
